--- a/styles/form-container.css
+++ b/styles/form-container.css
@@ -61,6 +61,7 @@
   display: flex;
   gap: 16px;
   margin-bottom: 1rem;
+  align-items: center;
 }
 
 .form-container .input-wrapper-flex label {
@@ -134,4 +135,17 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .local input {
   width: 17rem;
+}
+
+.input-wrapper textarea {
+  width: 35rem;
+  background-color: var(--input-background);
+  border-radius: 8px;
+  border: 1px solid var(--input-stroke);
+  color: var(--input-placeholder);
+  padding: 16px;
+}
+
+.input-wrapper textarea::placeholder {
+  color: var(--input-placeholder);
 }
