--- a/styles/form-container.css
+++ b/styles/form-container.css
@@ -231,3 +231,97 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-family: "Open Sans", sans-serif;
   font-size: 0.875rem;
 }
+
+.style-container {
+  display: flex;
+  gap: 16px;
+  margin-top: 1.5rem;
+}
+
+.heading-style span {
+  color: var(--text-heading);
+  font-family: "Baloo 2", sans-serif;
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+#chk {
+  display: none;
+}
+
+.switch {
+  position: relative;
+  background-color: var(--input-background);
+  width: 64px;
+  height: 32px;
+  border-radius: 40px;
+  display: flex;
+  align-items: center;
+  padding: 5px;
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+  border: 1px solid var(--input-stroke);
+}
+
+.slider {
+  position: absolute;
+  background-color: var(--shape-button);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  transition: all 0.5s ease-in-out;
+}
+
+.style-input-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.wrapper {
+  display: flex;
+  gap: 12px;
+}
+
+.img {
+  width: 16px;
+  height: 16px;
+}
+
+.file-upload-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.file-upload {
+  display: none;
+}
+
+.custom-file-upload {
+  background-color: var(--input-background);
+  color: #f1e5e6;
+  padding: 12px 24px;
+  border-radius: 12px;
+  font-size: 18px;
+  font-family: sans-serif;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition: background 0.3s;
+}
+
+.custom-file-upload:hover {
+  background-color: #545658;
+}
+
+.upload-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+
+.upload-icon {
+  width: 100%;
+  height: 100%;
+  stroke: #7da7f8;
+}
