--- a/styles/form-container.css
+++ b/styles/form-container.css
@@ -206,6 +206,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 8px;
+  margin-bottom: 1.75rem;
 }
 
 .card {
@@ -234,8 +235,29 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .style-container {
   display: flex;
+  align-items: center;
   gap: 16px;
   margin-top: 1.5rem;
+}
+
+.container {
+  display: flex;
+  gap: 16px;
+}
+
+.picture-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.heading-style {
+  margin-bottom: 1rem;
+}
+
+.heading-style span {
+  font-size: 0.875rem;
+  font-family: "Open Sans", sans-serif;
+  color: var(--text-heading);
 }
 
 .heading-style span {
@@ -324,4 +346,25 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   width: 100%;
   height: 100%;
   stroke: #7da7f8;
+}
+
+.contact-heading {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  color: var(--text-heading);
+  font-family: "Open Sans", sans-serif;
+}
+
+.name {
+  padding: 0.8125rem;
+  width: 17rem;
+  background-color: var(--input-background);
+  border: 1px solid var(--input-stroke);
+  border-radius: 8px;
+  color: var(--input-placeholder);
+}
+
+.input label {
+  margin-top: 1.5rem;
 }
