--- a/styles/form-container.css
+++ b/styles/form-container.css
@@ -368,29 +368,45 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .input label {
   margin-top: 1.5rem;
 }
+.custom-checkbox input,
+.custom-radio input {
+  display: none;
+}
 
-.checkbox-wrapper {
+.custom-checkbox input + label:before {
+  content: "";
+  width: 18px;
+  height: 18px;
+  border-radius: 4px;
+  background-color: var(--input-background);
+  border: 1px solid var(--input-stroke);
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 8px;
+  margin-bottom: 3px;
+}
+
+.custom-checkbox input:checked + label:before {
+  background-image: url("../assets/check.svg");
+  background-position: center;
+  border: 2px solid var(--brand-light);
+}
+
+.button-container {
   display: flex;
   align-items: center;
-  gap: 8px;
-  margin-top: 1.5rem;
+  justify-content: flex-end;
 }
 
-input[type="checkbox"] {
-  width: 1rem;
-  height: 1rem;
-  cursor: pointer;
-  background-color: var(--input-background);
-}
-input[type="checkbox"]:checked {
-  appearance: none;
-  border-radius: 4px;
-  cursor: pointer;
-  position: relative;
-  transition: background 0.3s;
-  background-image: url("../assets/check.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  color: var(--brand-light);
+.button-container button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.8125rem 1.25rem;
+  gap: 12px;
+  border: none;
+  border-radius: 8px;
+  width: 11.0625rem;
+  background-color: var(--brand-dark);
+  color: var(--text-heading);
 }
